<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="task_fragment_label">First Fragment</string>
    <string name="task_detail_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="limpiar">Limpiar</string>
    <string name="que_tarea">¿Qué tarea vas a agregar?</string>
    <string name="de_que">¿De que se trata?</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="warning_empty">Campos vacíos</string>
    <string name="list_empty">Lista eliminada exitosamente</string>
</resources>